--- a/PluralSightClone/index.html
+++ b/PluralSightClone/index.html
@@ -28,7 +28,33 @@
                 <div class="links">
                     <a href="#">Forgot Password</a>
                     <a href="#">Sign in with company or school</a>
-                       
+                </div>
+                <div class="or">
+                    <hr class="bar" />
+                    <span>OR</span>
+                    <hr class="bar" />
+                </div>
+                <a href="#" class="secondary-btn">Create an account</a>
+            </div>
+            <footer id="main-footer">
+                <p>Copyright &copy; 2018,Pluralsight All Rights Reserved</p>
+                <div>
+                    <a href="#">terms of use</a> | <a href="#">Privacy Policy</a>
+                </div>
+            </footer>
+        </div>
+        <div id="right">
+            <div id="showcase">
+                <div class="showcase-content">
+                    <h1 class="showcase-text">
+                        Let's create the future <strong>together</strong>
+                    </h1>
+                    <a href="#" class="secondary-btn">Start a FREE 10-day trial</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
