--- a/PluralSightClone/index.html
+++ b/PluralSightClone/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+<!--Author: Vedanth V Baliga-->
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PluralSight</title>
 </head>
 
 <body>
